--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
+html, body {
+	overflow-y: hidden;
+}
+
+body, thead, tbody, .btn, .form-control, .input-group, .input-group-text {
+	color: #eeeeee !important;
+}
+
+.form-control, .input-group, .input-group-text, body {
+	background-color: #111111 !important;
+}
+
+.btn {
+	background-color: #222222 !important;
+	border-color: #ced4da;
+}
+
+/* COLORS */
 .c-white {
 	color: #eeeeee;
 }
@@ -12,13 +30,30 @@
 	background-color: #222222;
 }
 
-.form-control, .input-group, body {
-	background-color: #111111 !important;
-	color: #eeeeee !important;
+/* TABLE */
+#tabdiv {
+
 }
 
-.btn {
-	background-color: #222222 !important;
-	color: #eeeeee !important;
-	border-color: #ced4da;
+#pooldata {
+
+}
+
+.tbody-scroll tbody {
+	display: block;
+	overflow: auto;
+	height: 60vh;
+	width: 100%;
+}
+.tbody-scroll tbody tr {
+	display: flex;
+}
+.tbody-scroll tbody tr td {
+	width: 100%;
+}
+.tbody-scroll thead tr {
+	display: flex;
+}
+.tbody-scroll thead tr th {
+	width: 100%;
 }
